zg 21.01.2018 15:17:46 +0200 - build 5130

1. уточнение 5118.

drkns 20.01.2018 15:25:15 +0000 - build 5129

1. С форума: В меню фильтров F5 отрабатывает для следующего элемента

drkns 15.01.2018 21:52:18 +0000 - build 5128

1. 0003575: Выделение "+", используя фильтр

zg 15.01.2018 17:29:26 +0200 - build 5127

1. SendDlgMessage(hDlg,DM_ENABLEREDRAW,TRUE,0) запрещал отрисовку диалога, если она была разрешена.

2. лишние вызовы DM_ENABLEREDRAW в меню настройки цветов.

drkns 11.01.2018 23:30:04 +0000 - build 5126

1. Рефакторинг.

drkns 11.01.2018 16:23:01 +0000 - build 5125

1. 0003574: Поиск по Alt+F7 не работает в каталогах, где в названии есть запятая

drkns 10.01.2018 23:23:33 +0000 - build 5124

1. Собственный буфер для ostream как замена CachedWrite.

zg 07.01.2018 17:29:09 +0200 - build 5123

1. после 5118 было видно, как заполняется меню автодополнения.

drkns 06.01.2018 18:38:21 +0000 - build 5122

1. Для стандартных потоков ввода-вывода используется собственный буфер (для более адекватной работы с юникодом).

2. Новая версия tinyxml2.

drkns 05.01.2018 23:03:50 +0000 - build 5121

1. Всякое на тему обработки исключений.

drkns 05.01.2018 21:47:18 +0000 - build 5120

1. Static analysis warnings & minor refactoring.

drkns 04.01.2018 18:17:13 +0000 - build 5119

1. Уточнение 5108.

2. Оптимизация GetFileString.

zg 04.01.2018 15:56:53 +0200 - build 5118

1. уменьшено количество перерисовок вертикального меню.

zg 04.01.2018 14:17:44 +0200 - build 5117

1. если при нажатии ctrlf5 диалог отказался от перемещения, нажатие отдаётся в диалоговую процедуру.

zg 30.12.2017 19:30:26 +0200 - build 5116

1. 0003573: If File View (F3) is invoked from Find Files (Alt-F7) results, switching to Edit (F6) shows Find Files dialog.

drkns 27.12.2017 21:45:47 +0000 - build 5115

1. Уточнение 5114.

drkns 21.12.2017 21:50:42 +0000 - build 5114

1. После 4563 рекурсивный обход дерева не спускался в DFS-каталоги.