@@ -2321,10 +2321,6 @@ $ #Настройка ассоциации файлов#
 
     Ассоциацию можно описать в поле #Описание ассоциации#.
 
-    Если вы не хотите, чтобы перед выполнением ассоциированной команды гасились
-панели, начните команду с символа '#@@#' (обратите внимание, что это имеет смысл
-только для программ, не осуществляющих текстового вывода).
-
     В ассоциированных командах могут использоваться специальные
 ~метасимволы~@MetaSymbols@.
 
@@ -3669,9 +3665,6 @@ $ #Настройка программы просмотра#
                           просмотра. Для указания имени
                           просматриваемого файла используйте
                           ~специальные символы~@MetaSymbols@.
-                          Если вы не хотите, чтобы перед запуском
-                          программы просмотра гасились панели,
-                          начните команду с символа '@@'.
 
     Встроенная программа просмотра
 
@@ -3751,9 +3744,6 @@ $ #Настройка редактора#
   #Команда#                 Команда для запуска внешнего редактора.
   #редактирования#          Для указания имени просматриваемого файла
                           используйте ~специальные символы~@MetaSymbols@.
-                          Если вы не хотите, чтобы перед запуском
-                          редактора гасились панели, начните команду
-                          с символа '@@'.
 
     Встроенный редактор
 
