@@ -1,3 +1,7 @@
+drkns 24.01.2018 07:37:22 +0000 - build 5131
+
+1. '@' в запускателе больше не имеет сакрального смысла и просто игнорируется.
+
 zg 21.01.2018 15:17:46 +0200 - build 5130
 
 1. уточнение 5118.
